ChangeLog for package rkwarddev

## 0.03-0 (2011-10-07)
  - redesigned options for rk.plugin.skeleton() again, to make them more intuitive and flexible
    at the same time. unfortunately, this breaks backwards compatibility again.

## 0.02-5 (2011-10-06)
  - added functions rk.rkh.caption(), rk.rkh.link(), rk.rkh.related(), rk.rkh.section(), rk.rkh.setting(),
    rk.rkh.settings(), rk.rkh.summary(), rk.rkh.technical(), rk.rkh.title() and rk.rkh.usage()
  - rk.rkh.doc() now only accepts nodes of the above functions as input (and gained support for title and sections)
  - rk.rkh.scan() now also looks for captions
  - added full help page support to rk.plugin.skeleton()
  - added support for properties to rk.JS.vars()
  - added function rk.JS.saveobj() to generate JS code for saveobject nodes.
  - added function rk.JS.options() to generate code for JS variables holding multiple options
  - added class rk.JS.opt and a show method for it (use rk.paste.JS() on that)
  - id() and echo() now also replace objects of classes rk.JS.opt and rk.JS.arr with their relevant ID
  - linked "Introduction to Writing Plugins for RKWard" locally to the manual pages

## 0.02-4 (2011-10-03)
  - some experimental JavaScript generator tools added, might very well be changed soon again:
    - added functions rk.JS.vars(), echo(), id(), ite() and rk.paste.JS() to help generate JavaScript code
    - added classes rk.JS.ite, rk.JS.arr and show methods for them
    - function rk.JS.array() now returns an object of class rk.JS.arr (use rk.paste.JS() on that)

## 0.02-3 (2011-09-30)
  - added functions rk.XML.attribute(), rk.XML.component(), rk.XML.components(), rk.XML.context(),
    rk.XML.entry(), rk.XML.hierarchy(), rk.XML.menu() and rk.XML.require()
  - rk.plugin.skeleton() and rk.XML.pluginmap() now use the new functions, which makes them much more flexible
  - added option "menu" to rk.plugin.skeleton()