@@ -3,6 +3,9 @@ ChangeLog for package rkwarddev
 ## 0.03-0 (2011-10-07)
   - redesigned options for rk.plugin.skeleton() again, to make them more intuitive and flexible
     at the same time. unfortunately, this breaks backwards compatibility again.
+  - rk.plugin.skeleton() and rk.XML.pluginmap() now only accept rk.XML.about() made objects
+    for "about"
+  - rk.plugin.skeleton() uses internal function XML2person() to create nicer Authors@R entries in DESCRIPTION
 
 ## 0.02-5 (2011-10-06)
   - added functions rk.rkh.caption(), rk.rkh.link(), rk.rkh.related(), rk.rkh.section(), rk.rkh.setting(),
